@@ -52,6 +52,21 @@ class User extends Handler
     }
 
     /**
+     * Delete user by id.
+     *
+     * @param $id id or guide of user
+     *
+     * @return bool
+     */
+    public function delete($id)
+    {
+        $db = new DB();
+        $result = $db->db()->delete(['db_name'=>Auth::AUTH_DB_NAME, 'table'=>Auth::AUTH_DB_TABLE, 'wheres'=>["id ="."'{$id}'"]]);
+        $db->db()->close();
+
+        return $result;
+    }
+    /**
      * Check is username is exists or not.
      *
      * @param $username , username of user
